--- a/index.html
+++ b/index.html
@@ -1,1 +1,181 @@
-Hello World.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Jesús profile</title>
+	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/lucianux/lucianux.github.io/main/styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8"/>
+</head>
+<body>
+
+	<div class="container">
+		<div class="hero">
+			<h1 class="name"><strong>Jesús</strong> Luciano</h1>
+			<span class="job-title">Developer</span>
+			<span class="email">lucianux@gmail.com</span>
+
+			<h2 class="lead">Development of web applications for startups and large companies</h2>
+		</div>
+	</div>
+
+<!-- Skills and intrest section -->
+	<div class="container">
+
+		<div class="sections">
+			<h2 class="section-title">Skills</h2>
+
+			<div class="list-card">
+				<span class="exp">+ 10 years</span>
+				<div>
+					<h3>Object programming & frameworks</h3>
+					<span>C#, .NET Framework, .NET Core,  and so on.</span>
+				</div>
+			</div>
+			
+			<div class="list-card">
+				<span class="exp">+ 6 years</span>
+				<div>
+					<h3>Application development</h3>
+					<span>Development, support, migrations, configurations, deployments and analysis of applications</span>
+				</div>
+			</div>	
+					
+			<div class="list-card">
+				<span class="exp">+ 6 years</span>
+				<div>
+					<h3>Several technologies</h3>
+					<span>HTML, JavaScript, CSS, ASP.NET, ASP.NET MVC, JQuery, plugins JQuery, JQGrid, Oracle, Sql</span>
+				</div>
+			</div>
+
+
+		</div>
+		<div class="sections">
+				<h2 class="section-title">Interests</h2>
+				
+				<div class="list-card">
+					<div>
+						<h3>Frontend technologies</h3>
+						<span>Angular, React</span>
+					</div>
+				</div>	
+
+				<div class="list-card">
+					<div>
+						<h3>Scripting languages</h3>
+						<span>Bash, Python</span>
+					</div>
+				</div>		
+		</div>
+	</div>
+
+	<!-- Achievements -->
+
+	<div class="container cards">
+		
+		<div class="card">
+			<div class="skill-level">
+				<span>+</span>
+				<h2>10</h2>
+			</div>
+
+			<div class="skill-meta">
+				<h3>Projects</h3>
+				<span>Adapting and creating solutions for customer's needs</span>
+			</div>
+		</div>
+
+			
+		<div class="card">
+			<div class="skill-level">
+				<h2>80</h2>
+				<span>%</span>
+			</div>
+
+			<div class="skill-meta">
+				<h3>Web</h3>
+				<span>Applications development integrating third-party services</span>
+			</div>
+		</div>
+
+			
+		<div class="card">
+			<div class="skill-level">
+				<h2>10</h2>
+				<span>%</span>
+			</div>
+
+			<div class="skill-meta">
+				<h3>Technical solutions for consulting firms</h3>
+				<span>Such as web services, scripts, configurations</span>
+			</div>
+		</div>
+
+
+		<div class="card">
+			<div class="skill-level">
+				<h2>10</h2>
+				<span>%</span>
+			</div>
+
+			<div class="skill-meta">
+				<h3>Leading</h3>
+				<span>Web projects and ensure the quality of delivery</span>
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Timeeline -->
+
+	<div class="container">
+		<ol class="timeline">
+		  <li>
+		    <p class="line">Experiences</p>
+		    <span class="point"></span>
+		    <p class="description">
+		      Software Engineer at Globant
+		    </p>
+		    <span class="date">Today - Feb. 2021</span>
+		  </li>
+
+		  <li>
+		    <span class="point"></span>
+		    <p class="description">
+		      Developer at Softtek
+		    </p>
+		    <span class="date">Jan. 2021 - Oct. 2016</span>
+		  </li>
+
+		  		  <li>
+		    <span class="point"></span>
+		    <p class="description">
+		      Various (Buenos Aires Government, Labs and Startups)
+		    </p>
+		    <span class="date">2016 - 2013</span>
+		  </li>
+
+		  		  <li>
+		    <p class="line">Education</p>
+		    <span class="point"></span>
+		    <p class="description">
+		      MsC in Computer Science
+		    </p>
+		    <span class="date">2016</span>
+		  </li>
+
+		</ol>
+
+	</div>
+
+
+	<br><br>
+
+
+	<footer class="container">
+		<span style="font-size: 16px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
+	</footer>
+
+
+</body>
+</html>
