--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Jesús profile</title>
-	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/lucianux/lucianux.github.io/main/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8"/>
 </head>
