--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		    <span class="date">Jan. 2021 - Oct. 2016</span>
 		  </li>
 
-		  		  <li>
+		  <li>
 		    <span class="point"></span>
 		    <p class="description">
 		      Various (Buenos Aires Government, Labs and Startups)
@@ -155,7 +155,7 @@
 		    <span class="date">2016 - 2013</span>
 		  </li>
 
-		  		  <li>
+		  <li>
 		    <p class="line">Education</p>
 		    <span class="point"></span>
 		    <p class="description">
@@ -168,14 +168,11 @@
 
 	</div>
 
-
 	<br><br>
 
-
 	<footer class="container">
-		<span style="font-size: 16px; margin-top: ">Coded by <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a></span>
+		<span style="font-size: 16px; margin-top: ">Coded and designed by <a href="mailto:cuenta@deemail.com">lucianux </a></span>
 	</footer>
-
 
 </body>
 </html>
