--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	<br><br>
 
 	<footer class="container">
-		<span style="font-size: 16px; margin-top: ">Coded and designed by <a href="mailto:cuenta@deemail.com">lucianux </a></span>
+		<span style="font-size: 16px; margin-top: ">Coded and designed by <a href="mailto:lucianux@gmail.com">lucianux </a></span>
 	</footer>
 
 </body>
